<resources>
    <string name="app_name">DoItMission-07</string>
    <string name="name">이&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;름</string>
    <string name="age">나&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;이</string>
    <string name="birthday">생년월일</string>
    <string name="save">저&#160;&#160;&#160;&#160;장</string>
    <string name="settings">설정</string>
    <string name="close">닫 기</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="일">일</string>
    <string name="defaultbirth">"1985년 11월 01일"</string>
</resources>
