<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/name"
            android:textSize="14dp" />
        <EditText
            android:id="@+id/editText1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_alignTop="@id/textView1"
            android:layout_toRightOf="@id/textView1"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@id/textView1"
            android:layout_margin="8dp"
            android:background="@drawable/lines"
            android:cursorVisible="false"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/age"
            android:textSize="14dp"
            android:layout_below="@id/textView1"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_alignTop="@id/textView2"
            android:layout_toRightOf="@id/textView2"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@id/textView2"
            android:layout_margin="8dp"
            android:background="@drawable/lines"
            android:cursorVisible="false"
            android:inputType="number|numberDecimal|numberSigned"
            android:maxLength="3"/>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/birthday"
            android:textSize="14dp"
            android:layout_below="@id/textView2"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_below="@id/textView3"
            android:layout_alignRight="@id/editText1"
            android:layout_alignLeft="@id/textView1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/defaultbirth"/>

    </RelativeLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"/>

</RelativeLayout>